--- a/web_mtvs/templates/index.html
+++ b/web_mtvs/templates/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>BANNER CLEANER</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -34,7 +34,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#ocr">CLEANER</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#chatbot">INQUIRY</a></li>
+                        <li class="nav-item mx-0 mx-lg-1">
+                            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#chatbotModal" data-bs-toggle="modal" data-bs-target="#chatbotModal">INQUIRY</a>
+                        </li>                        
                         <!-- <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li> -->
                     </ul>
                 </div>
@@ -45,21 +47,22 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="static/assets/img/MTVS_logo_white.png" alt="..." />
-                <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Developed by JM, MS, JM, IC</p>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Banner Cleaner</h1>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">Developed by JM, MS, JM, IC</p>
                 <!-- upload -->
                 <div class="text-center mt-4">                    
                     <!-- 업로드 버튼 (HTML 부분) -->
                     <form id="imageUploadForm" enctype="multipart/form-data" action="/myhome/ocr" method="post">
                         <input type="file" id="imageFile" name="images[]" multiple style="display:none;" onchange="displayFileName(this); displayFilePreview(this);">
-                        <label for="imageFile" class="btn btn-xl btn-outline-light">
+                        <div id="filePreview"></div>
+                        <label for="imageFile" class="btn btn-xl btn-outline-light mt-3">
                             <i class="fas fa-upload me-2"></i>
                             Choose Files <span id="fileName">No files chosen</span>
                         </label>
-                        <button type="submit" class="btn btn-xl btn-outline-light">Upload</button>
-                        <div id="filePreview"></div>
+                        <button type="submit" class="btn btn-xl btn-outline-light mt-3">Upload</button>
+
                     </form>
                     <!-- 로딩 표시 -->
                 <div id="loading" style="display:none;"><i class="fa fa-spinner fa-spin"></i> 처리 중...</div>
