--- a/web_mtvs/templates/index.html
+++ b/web_mtvs/templates/index.html
@@ -55,7 +55,7 @@
                 <div class="text-center mt-4">       
                     <!-- 업로드 버튼 (HTML 부분) -->
                     <form id="csvUploadForm" enctype="multipart/form-data" method="post">
-                        <input type="file" id="csvFile" name="images[]" multiple style="display:none;" onchange="displayFileName(this);">
+                        <input type="file" id="csvFile" name="file[]" multiple style="display:none;" onchange="displayFileName(this);">
                         <label for="csvFile" class="btn btn-xl btn-outline-light mt-3">
                             <i class="fas fa-upload me-2"></i>
                             Choose Files <span id="fileName">No files chosen</span>
@@ -79,7 +79,7 @@
             <div class="modal-dialog fixed-right-bottom">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="chatbotModalLabel">인채's CHATBOT</h5>
+                        <h5 class="modal-title" id="chatbotModalLabel">MTVS's CHATBOT</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
