--- a/web_mtvs/templates/index.html
+++ b/web_mtvs/templates/index.html
@@ -53,7 +53,7 @@
                 <p class="masthead-subheading font-weight-light mb-0">Developed by JM, MS, JM, IC</p>
                 <!-- upload -->
                 <div class="text-center mt-4">       
-                    <!-- 업로드 버튼 (HTML 부분) -->
+                    <div id="filePreview"></div>          
                     <form id="csvUploadForm" enctype="multipart/form-data" method="post">
                         <input type="file" id="csvFile" name="file[]" multiple style="display:none;" onchange="displayFileName(this);">
                         <label for="csvFile" class="btn btn-xl btn-outline-light mt-3">
@@ -61,7 +61,7 @@
                             Choose Files <span id="fileName">No files chosen</span>
                         </label>
                         <button type="submit" class="btn btn-xl btn-outline-light mt-3">Upload</button>
-                    </form>
+                    </form>          <!-- 업로드 버튼 (HTML 부분) -->
                     <!-- 로딩 표시 -->
                     <div id="loading" style="display:none;"><i class="fa fa-spinner fa-spin"></i> 처리 중...</div>
                 </div>
