--- a/web_mtvs/templates/index.html
+++ b/web_mtvs/templates/index.html
@@ -54,7 +54,8 @@
                 <!-- upload -->
                 <div class="text-center mt-4">       
                     <div id="filePreview"></div>          
-                    <form id="csvUploadForm" enctype="multipart/form-data" method="post">
+
+                    <form action='http://localhost:5000/myhome/upload' enctype="multipart/form-data" method="post">
                         <input type="file" id="csvFile" name="file[]" multiple style="display:none;" onchange="displayFileName(this);">
                         <label for="csvFile" class="btn btn-xl btn-outline-light mt-3">
                             <i class="fas fa-upload me-2"></i>
